@@ -690,3 +690,5 @@
 [2024-04-20]
 - Added Dwarven Keg to the loot table of Deranged Explorer for the quest What's in That Brew?.
 - Updated the flags of Dwarven Keg to allow all members of a group to loot it.
+- Added Horde Armaments to the loot table of Anub'ar Ambusher for the quest Into the Fold.
+- Updated the flags of Horde Armaments to allow all members of a group to loot it.
